--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -1,4 +1,5 @@
 {{>header}}
+<!--USES THE SAME CSS AS CENTER-->
 <link rel="stylesheet" href="/css/center.css">
 <main class="d-flex flex-column min-vh-100">
     <section class="section-3">
@@ -29,8 +30,6 @@
 
                         <p>Intensidad: Nivel {{intensity}}</p>
                         <p>Descripción: {{description}} </p>
-
-
 
                     </div>
                 </div>
