--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -1,3 +1,4 @@
+<!--THIS HTML WILL BE INJECTED IN THE FOOTER OF EVERY HTML-->
 <footer class="bg-dark text-white py-3 mt-auto">
     <div class="container">
         <div class="row justify-content-between">
@@ -13,4 +14,5 @@
 </footer>
 
 </body>
+
 </html>
