--- a/src/main/resources/static/css/centers.css
+++ b/src/main/resources/static/css/centers.css
@@ -1,29 +1,3 @@
-body {
-/display: flex;/
-/justify-content: center;/
-}
-
-.filtersContainer {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    margin-top: 40px;
-
-}
-
-.filters {
-    display: block;
-    padding: 10px;
-
-
-}
-
-label {
-    color: white;
-    width: 100%;
-    padding: 15px;
-}
-
 h2,
 h3,
 p {
@@ -31,7 +5,8 @@ p {
     margin: 15px;
 }
 
-h2, h3 {
+h2,
+h3 {
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -40,29 +15,52 @@ p {
     margin-bottom: 0 !important;
 }
 
-ul {
-    padding: 0 0 0 0 !important;
+/* FILTERED BY CCAA */
+.filtersContainer {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: 40px;
 }
 
 .filters {
-    border-radius: 10px;
-    background-color: #212529;
     width: 20%;
+
+    padding: 10px;
     margin: 0 40px 0 40px;
 
+    display: block;
+
     overflow: hidden;
+
+    border-radius: 10px;
+    background-color: #212529;
 }
 
-/* ////////////////////////////////////////////////////////// */
+label {
+    width: 100%;
+
+    padding: 15px;
+
+    color: white;
+}
+
+/* ALL GYMS */
 .gyms {
     width: 50%;
+
     align-items: center
 }
 
 .gym {
-    color: black;
     margin: 0 0 0 20px;
+
+    color: black;
     font-family: 'Montserrat', sans-serif;
+}
+
+ul {
+    padding: 0 0 0 0 !important;
 }
 
 li {
@@ -70,50 +68,47 @@ li {
     transition: transform 0.2s ease-in-out;
 
 }
+
 li:hover {
     transform: scale(1.02);
     cursor: pointer;
 }
 
 .ele {
-    background-color: #212529;
-    border-radius: 10px;
-    margin: 20px;
-
     width: 100%;
     height: 200px;
+
+    margin: 20px;
+
     overflow: hidden;
     display: flex;
 
+    background-color: #212529;
+    border-radius: 10px;
 }
 
 .gymImagen {
-
-    flex-shrink: 0;
-    /*padding: 10px;*/
-    border-radius: 10px;
-
     width: 10%;
     min-width: 30%;
-    overflow: hidden;
+
     padding: 0;
 
+    overflow: hidden;
+    flex-shrink: 0;
 
+    border-radius: 10px;
 }
 
 .gymImagen img {
     height: 100%;
     width: 100%;
+
     border-radius: 10px;
-
-
 }
 
 .ciudad {
-
     padding: 20px;
     flex: 1;
-
 }
 
 .buttonAndTittle {
@@ -125,11 +120,12 @@ li:hover {
 }
 
 .buttons {
-    flex-grow: 0;
     display: flex;
     align-items: center;
+
+    flex-grow: 0;
 }
 
-.buttons a{
+.buttons a {
     margin: 5px;
 }
