--- a/src/main/resources/static/css/mailbox.css
+++ b/src/main/resources/static/css/mailbox.css
@@ -1,8 +1,3 @@
-body {
-/display: flex;/
-/justify-content: center;/
-}
-
 .filtersContainer {
     display: flex;
     justify-content: center;
@@ -31,7 +26,8 @@ p {
     margin: 15px;
 }
 
-h2, h3 {
+h2,
+h3 {
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -70,6 +66,7 @@ li {
     transition: transform 0.2s ease-in-out;
 
 }
+
 .ele {
     background-color: #212529;
     border-radius: 10px;
@@ -125,6 +122,6 @@ li {
     align-items: center;
 }
 
-.buttons a{
+.buttons a {
     margin: 5px;
 }
