--- a/src/main/resources/templates/forms/contact.html
+++ b/src/main/resources/templates/forms/contact.html
@@ -21,18 +21,18 @@
 
                 <div class="form-group">
                     <label for="exampleFormControlTextarea1">Descripción:</label>
-                    <textarea id="description" name="description" class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Descripción aquí..." required></textarea>
+                    <textarea id="description" name="description" class="form-control" id="exampleFormControlTextarea1"
+                        rows="4" placeholder="Descripción aquí..." required></textarea>
                 </div>
                 <br><br>
 
                 <div class="mb-3">
                     <label for="exampleFormControlSelect1" class="form-label">Tipo de Consulta:</label>
-                    <select id="typeQuestion" name="typeQuestion" class="form-select" id="exampleFormControlSelect1" required>
-
+                    <select id="filter" name="typeQuestion" class="form-select" id="exampleFormControlSelect1"required>
                     </select>
                 </div>
 
-                <input type="submit" class="btn btn-light" value="Confirmar" required >
+                <input type="submit" class="btn btn-light" value="Confirmar" required>
 
             </form>
 
