--- a/src/main/resources/templates/forms/createClass.html
+++ b/src/main/resources/templates/forms/createClass.html
@@ -1,27 +1,30 @@
 {{>header}}
 <main class="d-flex flex-column min-vh-100">
-<link rel="stylesheet" href="/css/form.css">
+  <link rel="stylesheet" href="/css/form.css">
   <div>
     <h1>Ajustes de Administrador</h1>
   </div>
 
   <div class="contenedor">
 
-    <div class="form" >
+    <div class="form">
       <form action="/course/" method="post">
         <h2>Crear nueva clase</h2>
 
         <label>Nombre:</label>
-        <input type="text" id="name" name="name" class="form-control" placeholder="Nombre" aria-label="First name" required>
+        <input type="text" id="name" name="name" class="form-control" placeholder="Nombre" aria-label="First name"
+          required>
         <br><br>
 
         <label for="customRange3" class="form-label">Intensidad:</label>
-        <input type="range" id="intensity" name="intensity" class="form-range" min="0" max="5" step="1" value="2" id="customRange3" required>
+        <input type="range" id="intensity" name="intensity" class="form-range" min="0" max="5" step="1" value="2"
+          id="customRange3" required>
         <br><br>
 
         <div class="form-group">
           <label for="description">Descripción:</label>
-          <textarea class="form-control" id="description" name="description" rows="4" placeholder="Descripción aquí..." required ></textarea >
+          <textarea class="form-control" id="description" name="description" rows="4" placeholder="Descripción aquí..."
+            required></textarea>
         </div>
         <br><br>
 
