--- a/src/main/resources/templates/forms/createGym.html
+++ b/src/main/resources/templates/forms/createGym.html
@@ -1,72 +1,64 @@
 {{>header}}
 <main class="d-flex flex-column min-vh-100">
-    <link rel="stylesheet" href="/css/form.css">
+    <link rel="stylesheet" href="/css/form.css" />
 
     <div>
         <h1>Ajustes de Administrador</h1>
     </div>
 
     <div class="contenedor">
-
         <div class="form">
             <form action="/gym/" method="post" accept-charset="UTF-8">
                 <h2>Crear nuevo gimnasio</h2>
 
                 <div class="row">
-
                     <div class="col">
                         <label class="form-label">Dirección</label>
-                        <input type="text" class="form-control" id="address" name="address" placeholder="C. Tulipán" required>
+                        <input type="text" class="form-control" id="address" name="address" placeholder="C. Tulipán"
+                            required />
                     </div>
 
                     <div class="col">
                         <label class="form-label">Nº</label>
-                        <input type="text" class="form-control" id="number"  name="number" placeholder="20" required>
+                        <input type="text" class="form-control" id="number" name="number" placeholder="20" required />
                     </div>
 
                     <div class="col">
                         <label class="form-label">Código Postal</label>
-                        <input type="text" class="form-control" id="zip" name="zip" placeholder="28933" required>
+                        <input type="text" class="form-control" id="zip" name="zip" placeholder="28933" required />
                     </div>
-
                 </div>
 
-                <label  class="form-label">Comunidad Autónoma</label>
-                <select id="ccaa" name="ccaa" class="form-select" required>
-
-                </select>
+                <label class="form-label">Comunidad Autónoma</label>
+                <select id="ccaa" name="ccaa" class="form-select" required></select>
 
                 <label class="form-label">Ciudad</label>
-                <input type="text" class="form-control" id="city" name="city" placeholder="Ciudad" required>
-
+                <input type="text" class="form-control" id="city" name="city" placeholder="Ciudad" required />
 
                 <label class="form-label">Número de contacto</label>
-                <input type="text" class="form-control" id="phoneNumber" name="phoneNumber" placeholder="914889393" required>
-
+                <input type="text" class="form-control" id="phoneNumber" name="phoneNumber" placeholder="914889393"
+                    required />
 
                 <h3>Datos del gerente</h3>
                 <div class="row">
                     <div class="col">
                         <label>Nombre:</label>
-                        <input type="text" class="form-control" id="name" name="name" placeholder="Nombre" aria-label="First name" required>
+                        <input type="text" class="form-control" id="name" name="name" placeholder="Nombre"
+                            aria-label="First name" required />
                     </div>
                     <div class="col">
                         <label>Apellidos:</label>
-                        <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Apellidos" aria-label="Last name" required>
+                        <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Apellidos"
+                            aria-label="Last name" required />
                     </div>
                 </div>
 
-                <br><br>
+                <br /><br />
 
-                <input type="submit" class="btn btn-light" value="Confirmar" required>
-
+                <input type="submit" class="btn btn-light" value="Confirmar" required />
             </form>
-
         </div>
-
-
     </div>
-
 </main>
 <script src="/js/ccaa.js" charset="UTF-8"></script>
 {{>footer}}
