--- a/src/main/resources/templates/forms/editGym.html
+++ b/src/main/resources/templates/forms/editGym.html
@@ -16,12 +16,14 @@
 
                 <div class="col">
                     <label class="form-label">Dirección</label>
-                    <input type="text" class="form-control" id="address" name="address" placeholder="C. Tulipán" value="{{gym.address}}">
+                    <input type="text" class="form-control" id="address" name="address" placeholder="C. Tulipán"
+                        value="{{gym.address}}">
                 </div>
 
                 <div class="col">
                     <label class="form-label">Nº</label>
-                    <input type="text" class="form-control" id="number"  name="number" placeholder="20" value="{{gym.number}}">
+                    <input type="text" class="form-control" id="number" name="number" placeholder="20"
+                        value="{{gym.number}}">
                 </div>
 
                 <div class="col">
@@ -31,34 +33,37 @@
 
             </div>
 
-            <label  class="form-label">Comunidad Autónoma</label>
-            <select id="ccaa" name="ccaa" value="{{gym.ccaa}}" class="form-select" >
+            <label class="form-label">Comunidad Autónoma</label>
+            <select id="ccaa" name="ccaa" value="{{gym.ccaa}}" class="form-select">
                 <option>{{gym.ccaa}}</option>
             </select>
             <script src="/js/ccaa.js" charset="UTF-8"></script>
             <label class="form-label">Ciudad</label>
-            <input type="text" class="form-control" id="city" name="city" placeholder="Ciudad"  value="{{gym.city}}">
+            <input type="text" class="form-control" id="city" name="city" placeholder="Ciudad" value="{{gym.city}}">
 
 
             <label class="form-label">Número de contacto</label>
-            <input type="text" class="form-control" id="phoneNumber" name="phoneNumber" placeholder="914889393"  value="{{gym.phoneNumber}}">
+            <input type="text" class="form-control" id="phoneNumber" name="phoneNumber" placeholder="914889393"
+                value="{{gym.phoneNumber}}">
 
 
             <h3>Datos del gerente</h3>
             <div class="row">
                 <div class="col managerClass" data-id="{{manager.id}}">
                     <label>Nombre:</label>
-                    <input type="text" class="form-control" id="name" name="name" placeholder="Nombre" aria-label="First name" value="{{manager.name}}">
+                    <input type="text" class="form-control" id="name" name="name" placeholder="Nombre"
+                        aria-label="First name" value="{{manager.name}}">
                 </div>
                 <div class="col">
                     <label>Apellidos:</label>
-                    <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Apellidos" aria-label="Last name" value="{{manager.lastName}}">
+                    <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Apellidos"
+                        aria-label="Last name" value="{{manager.lastName}}">
                 </div>
             </div>
 
             <br><br>
 
-            <a id="myButton"   href="#" class="btn btn-secondary">Confirmar</a>
+            <a id="myButton" href="#" class="btn btn-secondary">Confirmar</a>
 
 
 
