--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,71 +1,74 @@
 <!DOCTYPE html>
 <html>
+<!--THIS HTML WILL BE INJECTED IN THE HEADER OF EVERY HTML-->
 
 <head>
     <title>CvGYM</title>
     <link rel="icon" href="/img/logo/logocv.png" type="image/x-icon">
     <link rel="shortcut icon" href="/img/logo/logocv.png" type="image/x-icon">
 
-    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8"/>
+    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
 
     <link rel="stylesheet" href="/css/homepage.css">
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.css' />
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.print.min.css' media='print' />
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.print.min.css'
+        media='print' />
     <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.js'></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-          integrity="sha384- rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        integrity="sha384- rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-            integrity="sha384- cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-            crossorigin="anonymous"></script>
+        integrity="sha384- cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384- kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-            crossorigin="anonymous"></script>
+        integrity="sha384- kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 
 
 </head>
 
 <body>
-<header>
-    <nav>
+    <header>
+        <nav>
 
-        <div class="logo">
-            <img src="/img/logo/logo.png" alt="Logo HTML">
-        </div>
+            <div class="logo">
+                <img src="/img/logo/logo.png" alt="Logo HTML">
+            </div>
 
-        <input type="checkbox" id="check">
-        <label for="check" class="checkbtn">
-            <i class="fas fa-bars" style="color: white;"></i>
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="fas fa-bars" style="color: white;"></i>
 
-        </label>
+            </label>
 
-        <ul class="sections">
+            <ul class="sections">
 
-            <li><a href="/">Inicio</a></li>
-            <li><a href="/centers/">Centros</a></li>
-            <li><a href="/prices/">Precios</a></li>
-            <li><a href="/course/">Cursos</a></li>
-            <li><a href="/coaches/">Personal</a></li>
-            <li><a href="/create-question/">Contacto</a></li>
-            <li><a href="/help/">Ayuda y FAQ's</a></li>
+                <li><a href="/">Inicio</a></li>
+                <li><a href="/centers/">Centros</a></li>
+                <li><a href="/prices/">Precios</a></li>
+                <li><a href="/course/">Cursos</a></li>
+                <li><a href="/coaches/">Personal</a></li>
+                <li><a href="/create-question/">Contacto</a></li>
+                <li><a href="/help/">Ayuda y FAQ's</a></li>
 
-        </ul>
-        <div class="dropdown">
-            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                Acciones Administrador
-            </a>
-
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <li><a class="dropdown-item" href="/create-Gym/" >Crear gimnasio</a></li>
-                <li><a class="dropdown-item" href="/create-Class/" >Crear clase</a></li>
-                <li><a class="dropdown-item" href="/add-Coach/" >Añadir entrenador a un gimnasio</a></li>
-                <li><a class="dropdown-item" href="/add-class-to-gym/" >Añadir clase a un gimnasio</a></li>
-                <li><a class="dropdown-item" href="/mailbox/" >Ver buzón</a></li>
             </ul>
-        </div>
+            <div class="dropdown">
+                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                    Acciones Administrador
+                </a>
 
-    </nav>
-</header>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <li><a class="dropdown-item" href="/create-Gym/">Crear gimnasio</a></li>
+                    <li><a class="dropdown-item" href="/create-Class/">Crear clase</a></li>
+                    <li><a class="dropdown-item" href="/add-Coach/">Añadir entrenador a un gimnasio</a></li>
+                    <li><a class="dropdown-item" href="/add-class-to-gym/">Añadir clase a un gimnasio</a></li>
+                    <li><a class="dropdown-item" href="/mailbox/">Ver buzón</a></li>
+                </ul>
+            </div>
+
+        </nav>
+    </header>
