Update relacion gym-course -> delete de un curso

--- a/src/main/resources/templates/center.html
+++ b/src/main/resources/templates/center.html
@@ -8,7 +8,7 @@
 </section>
 <!-- ///////////////////////////////////////////////////////////////////////////////////-->
 <!--GYM INFORMATION-->
-<div class="main">
+<div class="main" data-id="{{gym.id}}">
     <h1 class="title">SI TIENES DUDAS, LLÁMANOS O ENVIANOS UN CORREO</h1>
     <section class="section-2">
         <!--INFORMATION BOX-->
@@ -69,7 +69,7 @@
 <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPFQiBLzTqRwHBGJJrrxb6oI1tUwRirD0&callback=initMap&v=weekly"
     async></script>
-<script src="/js/delete/deleteClass.js"></script>
+<script src="/js/delete/deleteClassFromGym.js"></script>
 <script src="/js/map.js"></script>
 
 {{>footer}}
