Pedir verificacion al hacer DELETE, con js

--- a/src/main/resources/templates/center.html
+++ b/src/main/resources/templates/center.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class="course">
                     <div class="buttonAndTittle">
-                        <h2>{{name}}</h2>
+                        <h2>{{name}} | ID: {{id}}</h2>
                         <div class="buttons">
                             <a href="#" class="btn btn-danger" data-id="{{id}}">Eliminar</a>
                         </div>
