--- a/src/main/resources/templates/centers.html
+++ b/src/main/resources/templates/centers.html
@@ -36,7 +36,7 @@
 
                         <div class="ciudad">
                             <div class="buttonAndTittle">
-                                <h2>{{city}}</h2>
+                                <h2>{{city}} | ID: {{id}}</h2>
                                 <div class="buttons">
 
                                     <a href="/edit-Gym?gymId={{id}}" class="btn btn-secondary">Editar</a>
