--- a/src/main/resources/templates/coaches.html
+++ b/src/main/resources/templates/coaches.html
@@ -30,7 +30,7 @@
 
                     <div class="ele">
                         <div class="imagen">
-                            <img src="/img/center/gymPhoto.jpg" alt="Imagen">
+                            <img src="/img/coach/coach.jpg" alt="Imagen">
                         </div>
 
                         <div class="person">
@@ -42,7 +42,7 @@
 
                             </div>
                             <p>{{name}} {{lastName}}</p>
-                            <p>Id Gimnasio: {{gymId}}</p>
+                            <p>ID Gimnasio: {{gymId}}</p>
 
                         </div>
                     </div>
