--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -19,7 +19,7 @@
                     <div class="course">
 
                         <div class="buttonAndTittle">
-                            <h2>{{name}}</h2>
+                            <h2>{{name}} | ID: {{id}}</h2>
                             <div class="buttons">
 
                                 <a href="/edit-Class?courseId={{id}}" class="btn btn-secondary">Editar</a>
