--- a/src/main/resources/templates/forms/editGym.html
+++ b/src/main/resources/templates/forms/editGym.html
@@ -10,7 +10,7 @@
 
         <div data-id="{{gym.id}}" class="form">
 
-            <h2>Crear nuevo gimnasio</h2>
+            <h2>Editar gimnasio</h2>
 
             <div class="row">
 
