Actualizaciones para incluir bdd

--- a/src/main/resources/templates/coaches.html
+++ b/src/main/resources/templates/coaches.html
@@ -26,7 +26,7 @@
             <h2 class="coach">ENTRENADORES</h2>
             <ul id="list">
                 {{#coaches}}
-                <li data-id="{{id}}" class="{{gymId}}">
+                <li data-id="{{id}}" class="{{gym.id}}">
 
                     <div class="ele">
                         <div class="imagen">
@@ -42,7 +42,7 @@
 
                             </div>
                             <p>{{name}} {{lastName}}</p>
-                            <p>ID Gimnasio: {{gymId}}</p>
+                            <p>ID Gimnasio: {{gym.id}}</p>
 
                         </div>
                     </div>
