--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -29,7 +29,7 @@
                         </div>
 
                         <p>Intensidad: Nivel {{intensity}}</p>
-                        <p>Descripción: {{description}} </p>
+                        <p>Descripción: {{{description}}} </p>
 
                     </div>
                 </div>
