--- a/src/main/resources/templates/forms/contact.html
+++ b/src/main/resources/templates/forms/contact.html
@@ -1,4 +1,12 @@
 {{>header}}
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<!--<link rel="stylesheet" href="css/site.css">-->
+<link rel="stylesheet" href="/css/richtext.min.css">
+<script type="text/javascript" src="/js/jquery.richtext.js"></script>
+
 <main class="d-flex flex-column min-vh-100">
     <link rel="stylesheet" href="/css/form.css">
     <div>
@@ -19,11 +27,20 @@
                 <input type="text" id="subject" name="subject" class="form-control" placeholder="Asunto" required>
                 <br><br>
 
-                <div class="form-group">
+                <div class="form-group" >
                     <label for="exampleFormControlTextarea1">Descripción:</label>
                     <textarea id="description" name="description" class="form-control" id="exampleFormControlTextarea1"
                         rows="4" placeholder="Descripción aquí..." required></textarea>
                 </div>
+
+
+                <script>
+                    $(document).ready(function() {
+                        $('#description').richText();
+                    });
+                </script>
+
+
                 <br><br>
 
                 <div class="mb-3">
@@ -33,6 +50,8 @@
                 </div>
 
                 <input type="submit" class="btn btn-light" value="Confirmar" required>
+
+
 
             </form>
 
