--- a/src/main/resources/templates/mailbox.html
+++ b/src/main/resources/templates/mailbox.html
@@ -36,7 +36,9 @@
                             </div>
                             <p>Correo: {{mail}}</p>
                             <p>Tipo pregunta: {{typeQuestion}}</p>
-                            <p>Descripción: {{description}}</p>
+                            <p>
+                                Descripción: <div class="descrip"> {{{description}}}</div>
+                            </p>
                         </div>
                     </div>
                 </li>
