--- a/src/main/resources/templates/center.html
+++ b/src/main/resources/templates/center.html
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                     <p>Intensidad: Nivel {{intensity}}</p>
-                    <p>Descripción: {{description}} </p>
+                    <p>Descripción: {{{description}}} </p>
                 </div>
             </div>
         </li>
